# recommendation-system

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  config.toml  tables.csv  times_to_table.py
.github/: master.yaml
.github/workflows/: master.yaml
config/: Cargo.toml  example.toml
config/src/: lib.rs
controller/: Cargo.toml
controller/src/: entity.rs  error.rs  lazy.rs  lib.rs  searchby.rs  values.rs
controllers/books/: .env  Cargo.toml  prepare.sh
controllers/books/indexes/2020-06-26-005206_create_indexes/: down.sql  up.sql
controllers/books/migrations/2020-05-25-154123_create_users/: up.sql
controllers/books/migrations/2020-05-25-155419_create_books/: up.sql
controllers/books/migrations/2020-05-25-160123_create_ratings/: up.sql
controllers/books/sequence/2020-06-26-024401_alter_users/: up.sql
controllers/books/src/: lib.rs  models.rs  schema.rs
controllers/books/src/models/: books.rs  ratings.rs  users.rs
controllers/books/triggers/2020-06-26-184809_update_means_on_new/: down.sql
controllers/books/triggers/2020-06-26-192457_update_means_on_del/: up.sql
controllers/books/triggers/2020-06-26-194032_update_means_on_upd/: up.sql
controllers/movie-lens/: .env  Cargo.toml  LICENSE  prepare.sh
controllers/movie-lens-small/: .env  Cargo.toml  prepare.sh
controllers/movie-lens-small/data/: ratings-by-items.csv
controllers/movie-lens-small/migrations/2020-05-25-184620_create_users/: up.sql
controllers/movie-lens-small/migrations/2020-05-25-184627_create_movies/: down.sql  up.sql
controllers/movie-lens-small/migrations/2020-06-15-000503_create_means/: up.sql
controllers/movie-lens-small/sequence/2020-06-26-021731_alter_movies/: up.sql
controllers/movie-lens-small/sequence/2020-06-26-024401_alter_users/: down.sql  up.sql
controllers/movie-lens-small/src/: lib.rs  models.rs  schema.rs
controllers/movie-lens-small/src/models/: movies.rs  ratings.rs  users.rs
controllers/movie-lens/migrations/2020-05-26-190945_create_ratings/: up.sql
controllers/movie-lens/migrations/2020-06-15-002009_create_means/: down.sql
controllers/movie-lens/sequence/2020-06-26-021731_alter_movies/: down.sql  up.sql
controllers/movie-lens/sequence/2020-06-26-024401_alter_users/: up.sql
controllers/movie-lens/src/: lib.rs  models.rs  schema.rs
controllers/movie-lens/src/models/: movies.rs  ratings.rs  users.rs
controllers/shelves/: .env  Cargo.toml  prepare.sh
controllers/shelves/indexes/2020-06-26-201259_create_indexes/: down.sql  up.sql
controllers/shelves/migrations/2020-06-11-135223_create_books/: up.sql
controllers/shelves/migrations/2020-06-11-135229_create_ratings/: down.sql  up.sql
controllers/shelves/migrations/2020-06-15-140503_create_means/: up.sql
controllers/shelves/sequence/2020-06-26-201229_alter_books/: down.sql  up.sql
controllers/shelves/sequence/2020-06-26-201239_alter_users/: down.sql  up.sql
controllers/shelves/src/: lib.rs  models.rs  schema.rs
controllers/shelves/src/models/: books.rs  ratings.rs  users.rs
controllers/shelves/triggers/2020-06-26-204457_update_means_on_new/: up.sql
controllers/shelves/triggers/2020-06-26-204500_update_means_on_del/: down.sql
controllers/simple-movie/: .env  Cargo.toml  prepare.sh
controllers/simple-movie/data/: movies.csv
controllers/simple-movie/migrations/2020-05-24-180039_create_users/: up.sql
controllers/simple-movie/migrations/2020-05-24-180129_create_movies/: down.sql  up.sql
controllers/simple-movie/migrations/2020-06-14-233409_create_means/: up.sql
controllers/simple-movie/src/: lib.rs  models.rs  schema.rs
controllers/simple-movie/src/models/: movies.rs  ratings.rs  users.rs
controllers/simple-movie/triggers/2020-06-26-184809_update_means_on_new/: up.sql
controllers/simple-movie/triggers/2020-06-26-194032_update_means_on_upd/: down.sql
engine/: Cargo.toml
engine/benches/: distances.rs
engine/examples/: adjusted_cosine_matrix.rs  calculate.rs
engine/src/: chunked_matrix.rs  distances.rs  error.rs  knn.rs  lib.rs  maped_distance.rs  similarity_matrix.rs  utils.rs
engine/src/distances/: items.rs  users.rs
recommend/: .gitignore  Cargo.toml  TODO.md
recommend/benches/: distances.rs
recommend/examples/: calculate.rs
recommend/src/: distances.rs  knn.rs  lib.rs  record.rs  table.rs  utils.rs
recommend/test_data/: music.csv
src/: main.rs  parser.rs  utils.rs
src/parser/: basics.rs
tests/: movie-lens-adj-cosine.in  movie-lens-slope-one.in  result_mongo.out  result_psql.out  result_psql_mongo.out  test.in
