[package]
name = "recommendation-system"
version = "0.1.0"
authors = [ "Kevin Del Castillo <quebin31@gmail.com>" ]
edition = "2018"

[workspace]
members = [
    "controller",
    "controllers/*",
    "engine",
]

[dependencies]
anyhow = "1"
books = { version = "*", path = "controllers/books" }
controller = { version = "*", path = "controller" }
movie-lens= { version = "*", path = "controllers/movie-lens" }
movie-lens-small = { version = "*", path = "controllers/movie-lens-small" }
nom = "5"
engine = { version = "*", path = "engine" }
simple-movie = { version = "*", path = "controllers/simple-movie" }
rustyline = "6"