[package]
name = "recommendation-system"
version = "0.1.0"
authors = [ "Kevin Del Castillo <quebin31@gmail.com>" ]
edition = "2018"

[workspace]
members = [
    "controller",
    "controllers/*",
    "engine",
    "config"
]

[dependencies]
anyhow = "1"
books = { version = "*", path = "controllers/books" }
config = { version = "*", path = "config" }
controller = { version = "*", path = "controller" }
engine = { version = "*", path = "engine" }
movie-lens= { version = "*", path = "controllers/movie-lens" }
movie-lens-small = { version = "*", path = "controllers/movie-lens-small" }
nom = "5"
rustyline = "6"
shelves = { version = "*", path = "controllers/shelves" }
simple-movie = { version = "*", path = "controllers/simple-movie" }
