[package]
name = "controller"
version = "0.1.0"
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
prettytable-rs = "0.8"