[package]
name = "engine"
version = "0.1.0"
authors = [ "Kevin Del Castillo <quebin31@gmail.com>" ]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1.0.19"
controller = { version = "*", path = "../controller" }
num-traits = "0.2.11"

[dev-dependencies]
assert_approx_eq = "1"
books = { version = "*", path = "../controllers/books" }
common_macros = "0.1"
criterion = "0.3"
rand = "0.7"
simple-movie = { version = "*", path = "../controllers/simple-movie" }
movie-lens-small = { version = "*", path = "../controllers/movie-lens-small" }
movie-lens= { version = "*", path = "../controllers/movie-lens" }
thiserror = "1.0.19"

[features]
default = []
test-engine = []

[[bench]]
name = "distances"
harness = false


                                                                                            